kyverno/policies/kyverno-verify-sig.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image-keyless
spec:
  webhookConfiguration:
    timeoutSeconds: 30
  rules:
    - name: check-image-keyless
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - imageReferences:
        - "registry.gitlab.com/lefosg/excid-cicd-demo-project:1.0.7"
        failureAction: Enforce
        attestors:
        - entries:
          - keyless:
              subject: "https://gitlab.com/lefosg/excid-cicd-demo-project//.gitlab-ci.yml@refs/heads/main"
              issuer: "https://gitlab.com"
              # subjectRegExp: 
              # issuerRegExp: 
              rekor:
                url: https://rekor.sigstore.dev
